--- a/dev/extra_config/users.yaml
+++ b/dev/extra_config/users.yaml
@@ -4,5 +4,28 @@ admin:
   - sarah
 gpu:
   - devgpu
+  - karenna
+  - praneeth
+  - simone
+  - mshafiei
+  - nitesh
+  - sean
+  - sferrier
 regular:
   - devreg
+  - jonathan
+  - pragati
+  - morgan
+  - benjamin
+  - jyothi
+  - nathan
+  - daniella
+  - nbeutler
+  - jdye
+  - cdibiase
+  - jmagura
+  - tanand
+  - civester
+  - tixu
+  - mgee
+  - aweiss
