--- a/auth/users.yaml
+++ b/auth/users.yaml
@@ -16,6 +16,7 @@ data:
       - mshafiei
       - nitesh
       - sean
+      - sferrier
     regular:
       - devreg
       - jonathan
@@ -25,13 +26,11 @@ data:
       - jyothi
       - nathan
       - daniella
-      - collin
       - nbeutler
       - jdye
       - cdibiase
-      - yunhao
       - jmagura
-      - tanand
       - civester
       - tixu
       - mgee
+      - aweiss
