--- a/dev_config.yaml
+++ b/dev_config.yaml
@@ -229,6 +229,7 @@ hub:
             "datascience": "brineylab/jupyterhub-datascience:v2024-08-13",
             "deeplearning": "brineylab/jupyterhub-deeplearning:v2024-08-13",
         },
+        "image_default": "datascience",
         "gpu_counts": [1, 2, 4, 8],
         "node_info": node_info["dev"],
         "server_type": "gpu-only" # can be: "cpu-gpu", "cpu-only", and "gpu-only"
