--- a/mcnulty_config.yaml
+++ b/mcnulty_config.yaml
@@ -164,7 +164,8 @@ hub:
 
       # set url for gpu status
       c.JupyterHub.template_vars.update({
-          "gpu_status_url": "http://172.29.180.217:5000/gpu_status_bynode"
+          "gpu_status_url": "http://172.29.180.217:5000/gpu_status_bynode",
+          "cpu_status_url": "http://172.29.180.217:5001/cpu_status_bynode"
       })
 
     # set admin and allowed users -> allow admin and gpu users only
